# coding-challenge

./: README.md
05-Text-Search-Engine/: challenge.md
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/: Cargo.toml  Notes.md  README.md
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/Dataset/: output.txt  tantivy.txt
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/app/src/: main.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/compile/: Cargo.toml
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/compile/benches/: benchmark_store.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/compile/src/: lib.rs  main.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/data_structs/: Cargo.toml
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/data_structs/src/: trees.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/data_structs/src/trees/: ngram.rs  suffix.rs  trie.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/runtime/: Cargo.toml
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/runtime/benches/: benchmark_search.rs
05-Text-Search-Engine/Jobe/Simple-text-Search-engine/runtime/src/: lib.rs  main.rs
