[workspace]
members = [ "data_structs", "compile", "runtime" , "app"]

resolver = "2"

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
data_structs = { path = "./data_structs"}
unicode-segmentation = "1.12.0"
thiserror = "2.0.12"
serde_json = "1.0"
bincode = "2.0.1"
serde = "1.0"
